feat(convo): msgs working
